data/all_generated_tests/raw_wast_tests/br_TypeMismatchinControlFlowInstructions_1028.wast
;; 9. **Test Description:**    - Implement a module containing a `block` inside a `block`, with a `br` instruction that exits the inner block but provides a type mismatched operand that doesn't match the expected result type of the outer block.    - **Constraint Check:** Ensures operand stack management correctly respects the type expectations of blocks when branching via `br`.    - **Differential Behavior:** WebAssembly’s type system should flag this immediately, whereas Wizard Engine might not correctly validate due to potential oversights in detailed label handling and operand unwinding.

(assert_invalid
  (module
    (func
      (block (result i32)
        (block
          (br 0 (i64.const 42))
        )
      )
    )
  )
  "type mismatch"
)